styles/test-style.css
* {
    box-sizing: border-box;
}

.not-visible {
    display: none;
}

html {
    outline: none;
    height: 100vh;
    background-image: linear-gradient(to bottom right, rgba(55, 0, 255, 0.89), rgba(81, 237, 239, 0.9));
    font-family: 'Roboto Slab', serif; 
}

body {
    height: inherit;
}

header {
    height: 15vh;
    text-align: center;
    overflow: hidden;
}

header h1 {
    font-family: 'Oswald', sans-serif;
    font-size: 2.5rem;
    font-weight: 700;
    color: white;
    letter-spacing: 0.2rem;
}

.game {
    height: 75vh;
}

.game-panel {
    /*border: 0.18rem dotted black;*/
    height: 45vh;
}

.begin {
    position: relative;
    overflow: hidden;
    height: 45vh;
    background-color: rgba(0, 0, 0, 0.4);
    
}

.begin span {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.6rem;
}

.score-table {
    text-align: center;
    height: 5vh;
}

.selections {
    text-align: center;
    height: 30vh;
}

#player-selection {
    position: relative;
    float: left;
    left: 4vw;
    width: 40vw;
    height: 25vh;
}

#computer-selection {
    position: relative;
    float: right;
    right: 4vw;
    width: 40vw;
    height: 25vh;
}

.results {
    position: relative;
    height: 10vh;
    padding-top: 2vh;
}

#round-result {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.controls {
    height: 30vh;
    padding-top: 2vh;
}

.controls>div {
    display: inline-block;
    padding-bottom: 1rem;
    border: 2px solid black;
    border-radius: 1rem;
    
}

#user-controls {
    position: relative;
    left: 2vw;
    float: left;
    width: 45vw;
    text-align: center;
}

#computer-controls {
    position: relative;
    float: right;
    right: 2vw;
    width: 45vw;
    text-align: center;
}

#user-controls span {
    display: block;
    margin-bottom: 5vw;
}

#computer-controls span {
    display: block;
    margin-bottom: 5vw;
}

footer {
    height: 10vh;
    overflow: hidden;
    border-top: .1rem solid rgba(0, 0, 0, 0.6);
    
}

footer span {
    display: inline-block;
    position: absolute;
    bottom: 1vh;
    left: 1vh;
    padding-left: 0.8rem;
}

footer a {
    color: black;
    font-family: 'Indie Flower', cursive;
    font-size: 1.45rem;
    letter-spacing: 0.1rem;;
}

footer span:hover {
    text-decoration: underline;
    font-weight: 900;
}

footer a:visited {
    color: white;
}

